add download button to assignments and uploads
Signed-off-by: Riccardo Marchi <riccardo.marchi4@gmail.com>

--- a/webapp/src/app/modals/image-viewer/image-viewer-dialog.component.html
+++ b/webapp/src/app/modals/image-viewer/image-viewer-dialog.component.html
@@ -7,5 +7,11 @@
 </div>
 
 <div mat-dialog-actions style="justify-content: center">
-    <button mat-button color="warn" (click)="dialogRef.close()">Close</button>
+    <button mat-button
+            color="warn"
+            (click)="dialogRef.close()">Close</button>
+    <button mat-button
+            color="primary"
+            *ngIf="downloadable"
+            (click)="downloadDocument()">Download</button>
 </div>
