--- a/webapp/src/app/student/assignments/tab-expandend-assignment.component.html
+++ b/webapp/src/app/student/assignments/tab-expandend-assignment.component.html
@@ -18,8 +18,10 @@
                 <td mat-cell *matCellDef="let element"> {{element.status}} </td>
             </ng-container>
             <ng-container matColumnDef="download">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Download</th>
-                <td mat-cell *matCellDef="let element"><button mat-button *ngIf="element.imagePath">Download Document</button></td>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Document</th>
+                <td mat-cell *matCellDef="let element"><button mat-button
+                                                               *ngIf="element.imagePath"
+                                                               (click)="viewDocument(element)">View</button></td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="colsToDisplay"></tr>
             <tr mat-row *matRowDef="let row; columns: colsToDisplay;"></tr>
