--- a/webapp/src/app/student/vms/tab-vms.component.html
+++ b/webapp/src/app/student/vms/tab-vms.component.html
@@ -17,7 +17,7 @@
                     </ul>
                 </mat-card-content>
                 <mat-card-actions align="end">
-                    <button mat-raised-button [disabled]="!vm.active" color="primary" (click)="connectToVm(vm.id)">CONNECT TO VM</button>
+                    <button mat-raised-button [disabled]="!vm.active" color="primary" (click)="connectToVm(vm)">CONNECT TO VM</button>
 
                     <button mat-icon-button [disabled]="isOwner(vm.id)" (click)="addOwner(vm)">
                         <mat-icon>person_add</mat-icon>
