--- a/webapp/src/app/modals/uploads/uploads-dialog.component.html
+++ b/webapp/src/app/modals/uploads/uploads-dialog.component.html
@@ -8,6 +8,10 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Timestamp</th>
             <td mat-cell *matCellDef="let element"> {{dateString(element.timestamp)}} </td>
         </ng-container>
+        <ng-container matColumnDef="author">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Author</th>
+            <td mat-cell *matCellDef="let element"> {{dateString(element.author)}} </td>
+        </ng-container>
         <ng-container matColumnDef="comment">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Comment</th>
             <td mat-cell *matCellDef="let element"> {{element.comment}} </td>
