--- a/webapp/src/app/professor/assignments/tab-assignments.component.html
+++ b/webapp/src/app/professor/assignments/tab-assignments.component.html
@@ -92,7 +92,7 @@
                         </ng-container>
                         <ng-container matColumnDef="grade">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header>Grade</th>
-                            <td mat-cell *matCellDef="let element">
+                            <td mat-cell *matCellDef="let element" style="text-align: center">
                                 <button mat-button
                                         *ngIf="gradeAssignable(element)"
                                         (click)="assignGrade(element)">
