--- a/webapp/src/app/modals/new-course/new-course-dialog.component.html
+++ b/webapp/src/app/modals/new-course/new-course-dialog.component.html
@@ -4,52 +4,54 @@
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <mat-form-field class="full-width-input">
       <input
-        matInput
-        placeholder="Course Acronym"
-        type="text"
-        formControlName="acronym"
-        required
+              matInput
+              placeholder="Course Acronym"
+              type="text"
+              formControlName="acronym"
+              required
       />
       <mat-error>Please provide a valid Acronym</mat-error>
     </mat-form-field>
 
     <mat-form-field class="full-width-input">
       <input
-        matInput
-        placeholder="Course Name"
-        type="text"
-        formControlName="name"
-        required
+              matInput
+              placeholder="Course Name"
+              type="text"
+              formControlName="name"
+              required
       />
       <mat-error>Please provide a valid Name</mat-error>
     </mat-form-field>
 
     <label>Team Min Size:</label>
     <mat-slider
-      formControlName="teamMinSize"
-      [thumbLabel]="true"
-      (valueChange)="adaptMin($event)"
-      min="1"
-      max="10"
-      step="1"
+            color="primary"
+            formControlName="teamMinSize"
+            [thumbLabel]="true"
+            (valueChange)="adaptMin($event)"
+            min="1"
+            max="10"
+            step="1"
     ></mat-slider>
 
     <label>Team Max Size:</label>
     <mat-slider
-      formControlName="teamMaxSize"
-      [thumbLabel]="true"
-      (valueChange)="adaptMax($event)"
-      min="1"
-      max="10"
-      step="1"
+            color="primary"
+            formControlName="teamMaxSize"
+            [thumbLabel]="true"
+            (valueChange)="adaptMax($event)"
+            min="1"
+            max="10"
+            step="1"
     ></mat-slider>
 
     <mat-form-field>
       <ngx-mat-file-input
-        formControlName="vmModel"
-        placeholder="VM Model"
-        accept=".txt, .yaml, .yml"
-        required
+              formControlName="vmModel"
+              placeholder="VM Model"
+              accept=".txt, .yaml, .yml, .jpg, .jpeg, .png"
+              required
       ></ngx-mat-file-input>
       <mat-icon matSuffix>folder</mat-icon>
     </mat-form-field>
