--- a/webapp/src/app/professor/vms/tab-vms.component.html
+++ b/webapp/src/app/professor/vms/tab-vms.component.html
@@ -1,35 +1,43 @@
 <div class="container">
-    <div *ngFor="let dataSource of dataSources; let i = index">
-        <div class="section-title">
-            <h2>VMs for team: {{dataSource.data[0].team.name}}</h2>
-            <button mat-raised-button class="centered-button" color="primary" (click)="openDialogTeamOption(dataSource.data[0].team, i)">
-                Change Team Settings
-            </button>
-        </div>
-
-        <div class="content" fxLayout="row wrap" fxLayoutGap="16px grid">
-            <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="100%" fxFlex.md="50%" *ngFor="let vm of dataSource.data">
-                <mat-card class="mat-elevation-z4" [ngClass]="vm.active ? 'active' : 'inactive'">
-                    <mat-card-content>
-                        VM "{{vm.id}} - {{vm.name}}" configuration:
-                        <ul>
-                            <li>
-                                <span class="badge">vCPU:</span> {{vm.vcpu}} in use
-                            </li>
-                            <li>
-                                <span class="badge">RAM:</span> {{vm.ram}}GB
-                            </li>
-                            <li>
-                                <span class="badge">Disk:</span> {{vm.diskStorage}}GB
-                            </li>
-                        </ul>
-                    </mat-card-content>
-                    <mat-card-actions align="end">
-                        <button mat-raised-button [disabled]="!vm.active" color="primary" (click)="connectToVm(vm)">CONNECT</button>
-                    </mat-card-actions>
-                </mat-card>
+    <div *ngIf="dataSources.length > 0; then list else noList" ></div>
+    <ng-template #list>
+        <div *ngFor="let team of teams; let i = index">
+            <div class="section-title">
+                <h2>VMs for team: {{team.name}}</h2>
+                <button mat-raised-button class="centered-button" color="primary" (click)="openDialogTeamOption(team, i)">
+                    Change Team Settings
+                </button>
             </div>
+
+            <div *ngIf="dataSources[i] !== undefined && dataSources[i].data.length > 0; then vmList else noVm"></div>
+            <ng-template #vmList>
+                <div class="content" fxLayout="row wrap" fxLayoutGap="16px grid">
+                    <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="100%" fxFlex.md="50%" *ngFor="let vm of dataSources[i].data">
+                        <mat-card class="mat-elevation-z4" [ngClass]="vm.active ? 'active' : 'inactive'">
+                            <mat-card-content>
+                                VM "{{vm.id}} - {{vm.name}}" configuration:
+                                <ul>
+                                    <li>
+                                        <span class="badge">vCPU:</span> {{vm.vcpu}} in use
+                                    </li>
+                                    <li>
+                                        <span class="badge">RAM:</span> {{vm.ram}}GB
+                                    </li>
+                                    <li>
+                                        <span class="badge">Disk:</span> {{vm.diskStorage}}GB
+                                    </li>
+                                </ul>
+                            </mat-card-content>
+                            <mat-card-actions align="end">
+                                <button mat-raised-button [disabled]="!vm.active" color="primary" (click)="connectToVm(vm)">CONNECT</button>
+                            </mat-card-actions>
+                        </mat-card>
+                    </div>
+                </div>
+            </ng-template>
+            <ng-template #noVm>This team hasn't created any virtual machines yet</ng-template>
+            <mat-divider></mat-divider>
         </div>
-        <mat-divider></mat-divider>
-    </div>
+    </ng-template>
+    <ng-template #noList>No teams have been created for this course yet</ng-template>
 </div>
