--- a/webapp/src/app/student/team/tab-no-team.component.html
+++ b/webapp/src/app/student/team/tab-no-team.component.html
@@ -184,11 +184,14 @@
       <mat-label>Choose a date</mat-label>
       <input
         matInput
+        [min]="minDate"
+        [max]="maxDate"
+        disabled
         [matDatepicker]="picker"
         (dateChange)="selectDate($event.value.toString())"
       />
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker #picker></mat-datepicker>
+      <mat-datepicker disabled="false" #picker></mat-datepicker>
     </mat-form-field>
     <button
       mat-flat-button
