--- a/webapp/src/app/modals/uploads/uploads-dialog.component.html
+++ b/webapp/src/app/modals/uploads/uploads-dialog.component.html
@@ -10,7 +10,7 @@
         </ng-container>
         <ng-container matColumnDef="author">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Author</th>
-            <td mat-cell *matCellDef="let element"> {{dateString(element.author)}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.author}} </td>
         </ng-container>
         <ng-container matColumnDef="comment">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Comment</th>
