--- a/webapp/src/app/modals/grade-dialog/grade-dialog.component.html
+++ b/webapp/src/app/modals/grade-dialog/grade-dialog.component.html
@@ -2,7 +2,7 @@
 <div mat-dialog-content>
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
         <mat-error *ngIf="assignmentInvalid">Error while uploading your solution!</mat-error>
-        <mat-form-field class="full-width-input">
+        <mat-form-field style="width: 100%">
             <input matInput
                    type="text"
                    placeholder="Assignment evaluation"
