improve vms + add owner handling
Signed-off-by: Riccardo Marchi <riccardo.marchi4@gmail.com>

--- a/webapp/src/app/modals/edit-team-vm-options/edit-team-vm-options-dialog.component.html
+++ b/webapp/src/app/modals/edit-team-vm-options/edit-team-vm-options-dialog.component.html
@@ -39,7 +39,7 @@
         >
         </mat-slider>
 
-        <label>RAM size: {{ this.form.get('maxRam').value }}GB - currently used: {{ this.data.currentMaxRam }}</label><br />
+        <label>RAM size: {{ this.form.get('maxRam').value }}GB - currently used: {{ this.data.currentMaxRam }}GB</label><br />
         <mat-slider
                 color="primary"
                 formControlName="maxRam"
