--- a/webapp/src/app/professor/vms/tab-vms.container.html
+++ b/webapp/src/app/professor/vms/tab-vms.container.html
@@ -1,5 +1,5 @@
 <app-tab-professor-vms
-        [vms]="vms"
+        [vms]="vmBundle"
         (wipeVmEvent)="wipeVm($event)"
         (connectVmEvent)="connect($event)"
         (triggerVmEvent)="triggerVm($event)"
