--- a/webapp/src/app/student/vms/tab-vms.component.html
+++ b/webapp/src/app/student/vms/tab-vms.component.html
@@ -1,34 +1,34 @@
 <div class="container">
     <div class="content" fxLayout="row wrap" fxLayoutGap="16px grid">
-        <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="100%" fxFlex.md="50%" *ngFor="let vm of dataSource.data">
-            <mat-card class="mat-elevation-z4" [ngClass]="vm.active ? 'active' : 'inactive'">
+        <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="100%" fxFlex.md="50%" *ngFor="let vsd of dataSource">
+            <mat-card class="mat-elevation-z4" [ngClass]="vsd.vm.active ? 'active' : 'inactive'">
                 <mat-card-content>
-                    VM "{{vm.id}} - {{vm.name}}" configuration:
+                    VM "{{vsd.vm.id}} - {{vsd.vm.name}}" configuration:
                     <ul>
                         <li>
-                            <span class="badge">vCPU:</span> {{vm.vcpu}} in use
+                            <span class="badge">vCPU:</span> {{vsd.vm.vcpu}} in use
                         </li>
                         <li>
-                            <span class="badge">RAM:</span> {{vm.ram}}GB
+                            <span class="badge">RAM:</span> {{vsd.vm.ram}}GB
                         </li>
                         <li>
-                            <span class="badge">Disk:</span> {{vm.diskStorage}}GB
+                            <span class="badge">Disk:</span> {{vsd.vm.diskStorage}}GB
                         </li>
                     </ul>
                 </mat-card-content>
                 <mat-card-actions align="end">
-                    <button mat-raised-button [disabled]="!vm.active" color="primary" (click)="connectToVm(vm)">CONNECT TO VM</button>
+                    <button mat-raised-button [disabled]="!vsd.vm.active" color="primary" (click)="connectToVm(vsd.vm)">CONNECT TO VM</button>
 
-                    <button mat-icon-button [disabled]="isOwner(vm.id)" (click)="addOwner(vm)">
+                    <button mat-icon-button [disabled]="!isOwner(vsd.vm.id)" (click)="editOwners(vsd)">
                         <mat-icon>person_add</mat-icon>
                     </button>
 
-                    <button mat-icon-button [disabled]="isOwner(vm.id)" (click)="triggerTurn(vm.id, !vm.active)">
-                        <mat-icon *ngIf="vm.active">toggle_on</mat-icon>
-                        <mat-icon *ngIf="!vm.active">toggle_off</mat-icon>
+                    <button mat-icon-button [disabled]="!isOwner(vsd.vm.id)" (click)="triggerTurn(vsd.vm.id, !vsd.vm.active)">
+                        <mat-icon *ngIf="vsd.vm.active">toggle_on</mat-icon>
+                        <mat-icon *ngIf="!vsd.vm.active">toggle_off</mat-icon>
                     </button>
 
-                    <button mat-icon-button [disabled]="isOwner(vm.id)" (click)="openDialogVmOption(vm.id)">
+                    <button mat-icon-button [disabled]="!isOwner(vsd.vm.id)" (click)="openDialogVmOption(vsd.vm.id)">
                         <mat-icon>mode_edit</mat-icon>
                     </button>
 
