--- a/webapp/src/app/student/vms/tab-vms.container.html
+++ b/webapp/src/app/student/vms/tab-vms.container.html
@@ -1,11 +1,11 @@
 <app-tab-student-vms
-  [vms]="vms"
+  [vms]="vsd"
   (turnVmEvent)="turnVm($event)"
-  (addOwnerEvent)="addOwner($event)"
+  (editOwnerEvent)="editOwner($event)"
   (connectEvent)="connect($event)"
   (refreshVmList)="refreshVMs()"
 ></app-tab-student-vms>
-<div *ngIf="inTeam$; else single">
+<div *ngIf="inTeam; else single">
   <button mat-raised-button color="primary" [disabled]="checkResourceAvailability()" (click)="newVm()">New VM</button>
 </div>
 <ng-template #single>You have to be member of a team to use vms.</ng-template>
