--- a/webapp/src/app/student/team/tab-team.container.html
+++ b/webapp/src/app/student/team/tab-team.container.html
@@ -4,6 +4,7 @@
     [availableStudents]="availableStudents"
     [filteredStudents]="filteredStudents"
     [proposals]="proposals"
+    [currentCourse]="course"
     (submitTeamEvent)="submitTeam($event)"
     (searchStudentsEvent)="searchStudents($event)"
     (proposalAcceptedEvent)="proposalAccepted($event)"
