--- a/webapp/src/app/student/vms/tab-vms.component.html
+++ b/webapp/src/app/student/vms/tab-vms.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <app-tab-professor-team-resources [teamResources]="resources"></app-tab-professor-team-resources>
     <div class="content" fxLayout="row wrap" fxLayoutGap="16px grid">
         <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="100%" fxFlex.md="50%" *ngFor="let vsd of dataSource">
             <mat-card class="mat-elevation-z4" [ngClass]="vsd.vm.active ? 'active' : 'inactive'">
