--- a/webapp/src/app/modals/new-vm/new-vm.component.html
+++ b/webapp/src/app/modals/new-vm/new-vm.component.html
@@ -48,6 +48,7 @@
 
     <label>
       <mat-checkbox
+              color="primar"
               formControlName="active"
               (change)="checkActivation()"
       >
