--- a/webapp/src/app/modals/confirmation-dialog/confirmation-dialog.component.html
+++ b/webapp/src/app/modals/confirmation-dialog/confirmation-dialog.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Confirm</h1>
 <div mat-dialog-content>{{confirmMessage}}</div>
 <div mat-dialog-actions class="centered-buttons">
-    <button mat-button style="color: #fff;background-color: #153961;" (click)="dialogRef.close(true)">Confirm</button>
-    <button mat-button (click)="dialogRef.close(false)">Cancel</button>
+    <button mat-raised-button color="warn" (click)="dialogRef.close(true)">Confirm</button>
+    <button mat-raised-button color="primary" (click)="dialogRef.close(false)">Back</button>
 </div>
