--- a/webapp/src/app/professor/vms/tab-vms-resources.component.css
+++ b/webapp/src/app/professor/vms/tab-vms-resources.component.css
@@ -1,8 +1,7 @@
 div.section-resources {
     display: flex;
     justify-content: space-between;
-    margin-top: 4px;
-    margin-bottom: 16px;
+    margin: 4px 32px 16px;
 }
 
 p {
