Disable submit buttons if form is invalid, improve form validation

--- a/webapp/src/app/modals/edit-course/edit-course-dialog.component.html
+++ b/webapp/src/app/modals/edit-course/edit-course-dialog.component.html
@@ -88,5 +88,5 @@
   <button mat-button color="accent" (click)="deleteCourse()">
     Delete Course
   </button>
-  <button mat-button color="primary" (click)="editCourse()">Edit</button>
+  <button mat-button color="primary" [disabled]="form.invalid" (click)="editCourse()">Edit</button>
 </div>
