--- a/webapp/src/app/modals/edit-team-vm-options/edit-team-vm-options-dialog.component.html
+++ b/webapp/src/app/modals/edit-team-vm-options/edit-team-vm-options-dialog.component.html
@@ -68,6 +68,6 @@
 </div>
 
 <div mat-dialog-actions style="justify-content: center">
-    <button mat-button color="warn" (click)="dialogRef.close()">Close</button>
+    <button mat-button color="warn" [disabled]="form.invalid" (click)="dialogRef.close()">Close</button>
     <button mat-button color="primary" (click)="editTeamSpec()">Edit</button>
 </div>
