--- a/webapp/src/app/modals/login/login-dialog.component.html
+++ b/webapp/src/app/modals/login/login-dialog.component.html
@@ -25,7 +25,7 @@
     </mat-form-field>
 
     <div mat-dialog-actions align="end">
-      <button mat-raised-button color="primary">Login</button>
+      <button mat-raised-button color="primary" [disabled]="form.invalid">Login</button>
       <button mat-button mat-dialog-close color="warn">Cancel</button>
     </div>
   </form>
