--- a/webapp/src/app/modals/new-course/new-course-dialog.component.html
+++ b/webapp/src/app/modals/new-course/new-course-dialog.component.html
@@ -60,5 +60,5 @@
 
 <div mat-dialog-actions class="centered-buttons">
   <button mat-button color="warn" (click)="dialogRef.close()">Close</button>
-  <button mat-button color="primary" (click)="onSubmit()">Create</button>
+  <button mat-button color="primary" [disabled]="form.invalid" (click)="onSubmit()">Create</button>
 </div>
