--- a/webapp/src/app/modals/vm-options/vm-options-dialog.component.html
+++ b/webapp/src/app/modals/vm-options/vm-options-dialog.component.html
@@ -43,5 +43,5 @@
 
 <div mat-dialog-actions style="justify-content: center">
   <button mat-button color="warn" (click)="dialogRef.close()">Close</button>
-  <button mat-button color="primary" (click)="editVmSpec()">Set options</button>
+  <button mat-button color="primary" [disabled]="form.invalid" (click)="editVmSpec()">Set options</button>
 </div>
