--- a/webapp/src/app/modals/new-assignment/new-assignment-dialog.component.html
+++ b/webapp/src/app/modals/new-assignment/new-assignment-dialog.component.html
@@ -32,7 +32,7 @@
             <mat-datepicker disabled="false" #picker></mat-datepicker>
         </mat-form-field>
         <div mat-dialog-actions class="button-centered">
-            <button mat-button color="warn" (click)="dialogRef.close()">Close</button>
+            <button mat-button color="warn" mat-dialog-close>Close</button>
             <button mat-button color="primary" [disabled]="form.invalid">Publish</button>
         </div>
     </form>
