add course info + fix vms minor bugs
Signed-off-by: Riccardo Marchi <riccardo.marchi4@gmail.com>

--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -43,7 +43,7 @@
 
 <!-- Second toolbar with current selected course name -->
 <mat-toolbar class="subheader">
-  Course: {{ course ? course.name : '❓' }}
+  Course: {{ course ? course.name : '❓' }} {{course && !course.enabled ? '(Disabled)' : ''}}
   <span class="example-fill-remaining-space"></span>
   <button
     mat-icon-button
