handle professor vm dialogs with route
Signed-off-by: Riccardo Marchi <riccardo.marchi4@gmail.com>

--- a/webapp/src/app/professor/vms/tab-vms.container.html
+++ b/webapp/src/app/professor/vms/tab-vms.container.html
@@ -1,7 +1,6 @@
 <app-tab-professor-vms
         [vms]="vmBundle"
-        (wipeVmEvent)="wipeVm($event)"
-        (connectVmEvent)="connect($event)"
+        [course]="currentCourse"
         (triggerVmEvent)="triggerVm($event)"
         (refreshVmList)="refreshVmList()"
 ></app-tab-professor-vms>
