add professorAssignment dialog route
Signed-off-by: Riccardo Marchi <riccardo.marchi4@gmail.com>

--- a/webapp/src/app/professor/assignments/tab-assignments.component.html
+++ b/webapp/src/app/professor/assignments/tab-assignments.component.html
@@ -43,7 +43,8 @@
             <td mat-cell *matCellDef="let element">
                 <button mat-raised-button
                         color="primary"
-                        (click)="viewAssignment(element)">
+                        [routerLink]=""
+                        [queryParams]="{ professorAssignment: element.id }">
                     View
                 </button>
             </td>
@@ -159,7 +160,8 @@
             <td mat-cell *matCellDef="let element">
                 <button mat-raised-button
                         color="primary"
-                        (click)="viewAssignment(element)">
+                        [routerLink]=""
+                        [queryParams]="{ professorAssignment: element.id }">
                     View
                 </button>
             </td>
