minor fix + complete professor dialogs routing
Signed-off-by: Riccardo Marchi <riccardo.marchi4@gmail.com>

--- a/webapp/src/app/professor/assignments/tab-assignments.container.html
+++ b/webapp/src/app/professor/assignments/tab-assignments.container.html
@@ -1,1 +1,2 @@
-<app-tab-professor-assignments [assignments]="assignments"></app-tab-professor-assignments>
+<app-tab-professor-assignments [assignments]="assignments">
+</app-tab-professor-assignments>
