--- a/webapp/src/app/student/vms/tab-vms.component.html
+++ b/webapp/src/app/student/vms/tab-vms.component.html
@@ -42,7 +42,10 @@
                             <mat-icon>delete</mat-icon>
                         </button>
 
-                        <button mat-icon-button [disabled]="!isOwner(vsd.vm.id) || vsd.vm.active" (click)="openDialogVmOption(vsd.vm.id)">
+                        <button mat-icon-button
+                                [disabled]="!isOwner(vsd.vm.id) || vsd.vm.active"
+                                [routerLink]=""
+                                [queryParams]="{editVm: vsd.vm.id}">
                             <mat-icon>mode_edit</mat-icon>
                         </button>
 
