add studentAssignment dialog route
Signed-off-by: Riccardo Marchi <riccardo.marchi4@gmail.com>

--- a/webapp/src/app/student/assignments/tab-assignments.component.html
+++ b/webapp/src/app/student/assignments/tab-assignments.component.html
@@ -40,7 +40,8 @@
             <td mat-cell *matCellDef="let element">
                 <button mat-raised-button
                         color="primary"
-                        (click)="viewAssignment(element)">
+                        [routerLink]=""
+                        [queryParams]="{studentAssignment: element.assignmentId}">
                     View
                 </button>
             </td>
@@ -116,7 +117,8 @@
             <td mat-cell *matCellDef="let element">
                 <button mat-raised-button
                         color="primary"
-                        (click)="viewAssignment(element)">
+                        [routerLink]=""
+                        [queryParams]="{studentAssignment: element.assignmentId}">
                     View
                 </button>
             </td>
