--- a/webapp/src/app/student/assignments/tab-assignments.component.html
+++ b/webapp/src/app/student/assignments/tab-assignments.component.html
@@ -64,9 +64,57 @@
             <td mat-cell *matCellDef="let element" [attr.colspan]="colsToDisplay.length">
                 <div class="example-element-detail"
                      [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-                <app-tab-expandend-assignment [element]="expandedElement"
-                                              [uploads]="assignmentUploads"
-                ></app-tab-expandend-assignment>
+                    <div *ngIf="expandedElement" class="example-element-description">
+                        <div *ngIf="innerDataSource.data !== undefined && innerDataSource.data.length !== 0; then table else noTable"></div>
+                        <ng-template #table>
+                            <table mat-table [dataSource]="innerDataSource"
+                                   class="mat-elevation-z8"
+                                   style="width: 100%"
+                                   matSort>
+                                <ng-container matColumnDef="timestamp">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Timestamp</th>
+                                    <td mat-cell *matCellDef="let element"> {{dateString(element.timestamp)}} </td>
+                                </ng-container>
+                                <ng-container matColumnDef="author">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Author</th>
+                                    <td mat-cell *matCellDef="let element"> {{element.author}} </td>
+                                </ng-container>
+                                <ng-container matColumnDef="comment">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Comment</th>
+                                    <td mat-cell *matCellDef="let element"> {{element.comment}} </td>
+                                </ng-container>
+                                <ng-container matColumnDef="status">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+                                    <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+                                </ng-container>
+                                <ng-container matColumnDef="download">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Document</th>
+                                    <td mat-cell *matCellDef="let element"><button mat-button
+                                                                                   *ngIf="element.imagePath"
+                                                                                   (click)="viewDocument(element)">View</button></td>
+                                </ng-container>
+                                <tr mat-header-row *matHeaderRowDef="innerColsToDisplay"></tr>
+                                <tr mat-row *matRowDef="let row; columns: innerColsToDisplay;"></tr>
+                            </table>
+                        </ng-template>
+
+                        <ng-template #noTable>
+                            <p>No solutions uploaded yet!</p>
+                        </ng-template>
+
+                        <div style="flex-direction: row">
+                            <div style="text-align: center">
+                                <button mat-raised-button
+                                        *ngIf="canUpload"
+                                        color="primary"
+                                        style="margin: 20px"
+                                        [routerLink]=""
+                                        [queryParams]="{studentUpload: expandedElement.assignmentSolutionId}">Upload a new solution</button>
+                            </div>
+                        </div>
+
+                    </div>
+
                 </div>
             </td>
         </ng-container>
@@ -141,9 +189,57 @@
             <td mat-cell *matCellDef="let element" [attr.colspan]="colsToDisplay.length">
                 <div class="example-element-detail"
                      [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-                    <app-tab-expandend-assignment [element]="expandedElement"
-                                                  [uploads]="assignmentUploads"
-                    ></app-tab-expandend-assignment>
+                    <div *ngIf="expandedElement" class="example-element-description">
+                        <div *ngIf="innerDataSource.data !== undefined && innerDataSource.data.length !== 0; then table else noTable"></div>
+                        <ng-template #table>
+                            <table mat-table [dataSource]="innerDataSource"
+                                   class="mat-elevation-z8"
+                                   style="width: 100%"
+                                   matSort>
+                                <ng-container matColumnDef="timestamp">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Timestamp</th>
+                                    <td mat-cell *matCellDef="let element"> {{dateString(element.timestamp)}} </td>
+                                </ng-container>
+                                <ng-container matColumnDef="author">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Author</th>
+                                    <td mat-cell *matCellDef="let element"> {{element.author}} </td>
+                                </ng-container>
+                                <ng-container matColumnDef="comment">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Comment</th>
+                                    <td mat-cell *matCellDef="let element"> {{element.comment}} </td>
+                                </ng-container>
+                                <ng-container matColumnDef="status">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+                                    <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+                                </ng-container>
+                                <ng-container matColumnDef="download">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Document</th>
+                                    <td mat-cell *matCellDef="let element"><button mat-button
+                                                                                   *ngIf="element.imagePath"
+                                                                                   (click)="viewDocument(element)">View</button></td>
+                                </ng-container>
+                                <tr mat-header-row *matHeaderRowDef="innerColsToDisplay"></tr>
+                                <tr mat-row *matRowDef="let row; columns: innerColsToDisplay;"></tr>
+                            </table>
+                        </ng-template>
+
+                        <ng-template #noTable>
+                            <p>No solutions uploaded yet!</p>
+                        </ng-template>
+
+                        <div style="flex-direction: row">
+                            <div style="text-align: center">
+                                <button mat-raised-button
+                                        *ngIf="canUpload"
+                                        color="primary"
+                                        style="margin: 20px"
+                                        [routerLink]=""
+                                        [queryParams]="{studentUpload: expandedElement.assignmentSolutionId}">Upload a new solution</button>
+                            </div>
+                        </div>
+
+                    </div>
+
                 </div>
             </td>
         </ng-container>
