--- a/webapp/src/app/modals/uploads/uploads-dialog.component.html
+++ b/webapp/src/app/modals/uploads/uploads-dialog.component.html
@@ -22,9 +22,11 @@
         </ng-container>
         <ng-container matColumnDef="download">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Document</th>
-            <td mat-cell *matCellDef="let element"><button mat-button
-                                                           *ngIf="element.imagePath"
-                                                           (click)="viewDocument(element)">View</button></td>
+            <td mat-cell *matCellDef="let element">
+                <button mat-button
+                        *ngIf="element.imagePath"
+                        [routerLink]=""
+                        [queryParams]="{solution: data.id, professorImage: element.id}">View</button></td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="colsToDisplay"></tr>
         <tr mat-row *matRowDef="let row; columns: colsToDisplay;"></tr>
