--- a/webapp/src/app/professor/assignments/tab-assignments.component.html
+++ b/webapp/src/app/professor/assignments/tab-assignments.component.html
@@ -95,7 +95,8 @@
                             <td mat-cell *matCellDef="let element" style="text-align: center">
                                 <button mat-button
                                         *ngIf="gradeAssignable(element)"
-                                        (click)="assignGrade(element)">
+                                        [routerLink]=""
+                                        [queryParams]="{assignGrade: element.id}">
                                 <mat-icon>add_circle_outline</mat-icon>
                                 </button>
                                 {{element.grade}}
@@ -212,7 +213,8 @@
                             <td mat-cell *matCellDef="let element" style="text-align: center">
                                 <button mat-button
                                         *ngIf="gradeAssignable(element)"
-                                        (click)="assignGrade(element)">
+                                        [routerLink]=""
+                                        [queryParams]="{assignGrade: element.id}">
                                     <mat-icon>add_circle_outline</mat-icon>
                                 </button>
                                 {{element.grade}}
