--- a/webapp/src/app/student/assignments/tab-assignments.component.html
+++ b/webapp/src/app/student/assignments/tab-assignments.component.html
@@ -1,5 +1,3 @@
-<script src="../../modals/new-vm/new-vm.component.ts"></script>
-<script src="tab-expandend-assignment.component.ts"></script>
 <div class="container">
     <h2>Active Assignments</h2>
     <!-- Assignments -->
@@ -89,9 +87,11 @@
                                 </ng-container>
                                 <ng-container matColumnDef="download">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Document</th>
-                                    <td mat-cell *matCellDef="let element"><button mat-button
-                                                                                   *ngIf="element.imagePath"
-                                                                                   (click)="viewDocument(element)">View</button></td>
+                                    <td mat-cell *matCellDef="let element">
+                                        <button mat-button
+                                                *ngIf="element.imagePath"
+                                                [routerLink]=""
+                                                [queryParams]="{studentImage: element.id}">View</button></td>
                                 </ng-container>
                                 <tr mat-header-row *matHeaderRowDef="innerColsToDisplay"></tr>
                                 <tr mat-row *matRowDef="let row; columns: innerColsToDisplay;"></tr>
@@ -214,9 +214,12 @@
                                 </ng-container>
                                 <ng-container matColumnDef="download">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Document</th>
-                                    <td mat-cell *matCellDef="let element"><button mat-button
-                                                                                   *ngIf="element.imagePath"
-                                                                                   (click)="viewDocument(element)">View</button></td>
+                                    <td mat-cell *matCellDef="let element">
+                                        <button mat-button
+                                                *ngIf="element.imagePath"
+                                                [routerLink]=""
+                                                [queryParams]="{studentImage: element.id}">View</button>
+                                    </td>
                                 </ng-container>
                                 <tr mat-header-row *matHeaderRowDef="innerColsToDisplay"></tr>
                                 <tr mat-row *matRowDef="let row; columns: innerColsToDisplay;"></tr>
