--- a/webapp/src/app/professor/students/tab-students.component.html
+++ b/webapp/src/app/professor/students/tab-students.component.html
@@ -92,7 +92,7 @@
     <ng-container matColumnDef="team">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Team</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.team ? element.team.name : '' }}
+        {{ element.team && element.team.active ? element.team.name : '' }}
       </td>
     </ng-container>
 
