move professor assignment API calls to container
Signed-off-by: Riccardo Marchi <riccardo.marchi4@gmail.com>

--- a/webapp/src/app/professor/assignments/tab-assignments.container.html
+++ b/webapp/src/app/professor/assignments/tab-assignments.container.html
@@ -1,2 +1,5 @@
-<app-tab-professor-assignments [assignments]="assignments">
+<app-tab-professor-assignments [assignments]="assignments"
+                               [setAssignmentSolutions]="assignmentSolutions"
+                               (assignmentSolutionEvent)="getAssignmentSolutions($event)"
+                               (viewDocEvent)="viewDocument($event)">
 </app-tab-professor-assignments>
